kube/manifests/gifinator/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gifinator-frontend-deployment
  namespace: gifinator
  labels:
    app: gifinator-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gifinator-frontend
  template:
    metadata:
      labels:
        app: gifinator-frontend
    spec:
      containers:
      - name: gifinator-frontend
        image: inherently/gifinator:0.0.3
        ports:
        - containerPort: "8090"
