kube/manifests/gifinator/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gifinator-frontend-service
  namespace: gifinator
spec:
  selector:
    app: gifinator-frontend
  ports:
    - protocol: TCP
      port: 8090
