kube/manifests/gifinator/frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gifinator-frontend-ingress
  namespace: gifinator
spec:
  rules:
  - host: gif.kates.test
    http:
      paths:
      - path: /
        backend:
          serviceName: gifinator-frontend-service
          servicePort: 8090
